create classes for bug, member, project + other additions

--- a/squashr/App.axaml
+++ b/squashr/App.axaml
@@ -11,6 +11,7 @@
 		<vm:CreateAccountViewModel x:Key="CreateAccountViewModel" />
 		<vm:CreateLocalUserViewModel x:Key="CreateLocalUserViewModel" />
 		<vm:SelectUserViewModel x:Key="SelectUserViewModel" />
+		<vm:ProjectViewModel x:Key="ProjectViewModel" />
 	</Application.Resources>
 
     <Application.Styles>
