--- a/squashr/Views/CreateProjectView.axaml
+++ b/squashr/Views/CreateProjectView.axaml
@@ -3,9 +3,6 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-			 FontFamily="Gidole" x:Class="squashr.Controls.ProjectBox">
-	<Button Name="Btn" HorizontalContentAlignment="Center" Width="200"
-			Height="250">
-		<TextBlock Name="Title" FontSize="36" Margin="20"/>
-	</Button>
+			 FontFamily="Gidole" x:Class="squashr.Views.CreateProjectView"
+			 DataContext="{StaticResource CreateProjectViewModel}">
 </UserControl>
