--- a/squashr/Views/CreateProjectView.axaml
+++ b/squashr/Views/CreateProjectView.axaml
@@ -5,4 +5,27 @@
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 			 FontFamily="Gidole" x:Class="squashr.Views.CreateProjectView"
 			 DataContext="{StaticResource CreateProjectViewModel}">
+	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="1*" />
+			<ColumnDefinition Width="2*"/>
+			<ColumnDefinition Width="1*"/>
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<TextBlock Text="create project" Grid.Column="1" FontSize="40"
+				VerticalAlignment="Center" HorizontalAlignment="Center" />
+		<TextBox Name="NameInput" Watermark="project name..." Grid.Column="1" Grid.Row="2" Grid.RowSpan="1"/>
+		<Button Name="CreateBtn" Content="create" Grid.Column="1" HorizontalAlignment="Center" 
+				Grid.Row="4" MinWidth="100" MinHeight="40" 
+				HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+				Background="#3bffb4" MaxWidth="250" MaxHeight="100"/>
+	</Grid>
 </UserControl>
