--- a/squashr/Views/CreateLocalUserView.axaml
+++ b/squashr/Views/CreateLocalUserView.axaml
@@ -3,8 +3,7 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-			 FontFamily="Gidole" x:Class="squashr.Views.CreateLocalUserView"
-			 DataContext="{StaticResource CreateLocalUserViewModel}">
+			 FontFamily="Gidole" x:Class="squashr.Views.CreateLocalUserView">
 	
 	<StackPanel Orientation="Vertical">
 		<TextBlock Text="create local user" Margin="20" FontSize="36"/>
