--- a/squashr/Views/CreateProjectView.axaml
+++ b/squashr/Views/CreateProjectView.axaml
@@ -3,8 +3,7 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-			 FontFamily="Gidole" x:Class="squashr.Views.CreateProjectView"
-			 DataContext="{StaticResource CreateProjectViewModel}">
+			 FontFamily="Gidole" x:Class="squashr.Views.CreateProjectView">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="1*" />
