--- a/squashr/Controls/ProjectBox.axaml
+++ b/squashr/Controls/ProjectBox.axaml
@@ -5,7 +5,7 @@
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 			 FontFamily="Gidole" x:Class="squashr.Controls.ProjectBox">
 	<Button Name="Btn" HorizontalContentAlignment="Center" Width="200"
-			Height="250">
+			Height="250" Margin="20">
 		<TextBlock Name="Title" FontSize="36" Margin="20"/>
 	</Button>
 </UserControl>
