--- a/squashr/Views/CreateBugView.axaml
+++ b/squashr/Views/CreateBugView.axaml
@@ -20,10 +20,20 @@
 			<RowDefinition />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<StackPanel Grid.Column="2" Grid.ColumnSpan="1" Grid.Row="3">
+		<TextBlock Text="new bug" FontSize="36" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center"
+				   Margin="40"/>
+		<TextBox Name="Title" Watermark="bug title..." Grid.Column="2" Grid.Row="1"
+				 HorizontalAlignment="Stretch" Height="20"/>
+		<StackPanel Grid.Column="2" Grid.ColumnSpan="1" Grid.Row="2">
+			<TextBlock Text="severity" FontSize="26" HorizontalAlignment="Center"/>
 			<Slider Name="Severity" Maximum="2" IsSnapToTickEnabled="True"
 				TickFrequency="1"/>
 			<TextBlock Text="{Binding Severity}" FontSize="20" HorizontalAlignment="Center"/>
 		</StackPanel>
+		<Button Name="Create" Background="#3bffb4" Grid.Column="2"
+				Grid.Row="3" HorizontalAlignment="Stretch" Height="50"
+				HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+			<TextBlock Text="create" FontSize="22"/>
+		</Button>
 	</Grid>
 </UserControl>
