--- a/squashr/Views/BugView.axaml
+++ b/squashr/Views/BugView.axaml
@@ -28,7 +28,7 @@
 			<RowDefinition />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<controls:EditableTextBlock Name="TitleBlock" Text="balls" FontSize="36" Grid.Column="2"
+		<controls:EditableTextBlock Name="TitleBlock" FontSize="36" Grid.Column="2"
 									HorizontalAlignment="Center"/>
 		<Button Name="Close" Background="LightGray" Grid.Column="2" Grid.Row="8" HorizontalAlignment="Stretch"
 				Height="50" HorizontalContentAlignment="Center">
